удалены поля с time.Time в userCreate чтобы они не маппились в userRole
